Fix navigation bar on small screens

--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -202,6 +202,10 @@ body {
     align-items: center;
     position: relative;
 
+    a {
+        text-decoration: none;
+    }
+
     .fa-search {
         font-size: 25px;
         color: darken($colorLightGrey, 10%);
@@ -229,9 +233,13 @@ body {
         background-color: $colorBlue;
         margin-right: 50px;
         padding: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         i {
-            font-size: 22px;
+            font-size: 25px;
             padding: 5px;
+            margin-right: 5px;
             position: relative;
             top: 2px;;
         }
@@ -277,32 +285,102 @@ body {
 }
 
 @media all and (max-width: 1010px) {
-  .menu {
-    flex-direction: column;
-
-    li {
-        width: 100%;
-        text-align: center;
-        background-color: $colorRed;
-        &:hover, &:active {
-            background-color: darken($colorRed, 10%);
+    .head {
+        .head__logo {
+            padding-top: 1vmax;
+            img {
+                height: 2.7vmax;
+            }
         }
-        display: none;
+        .head__auth { 
+            font-size: 2vmax;
+            .head__auth_signin {
+                border-right: 2px solid $colorLightGrey;
+            }
+        }
     }
 
-    .menu__item:hover, .menu__item:active {
-        border-bottom: none;
+    .menu-container {
+        height: 5vmax;
+        border-bottom: 6px solid $colorRed;
     }
 
-    .menu__hamburger {
-        display: block;
-        color: white;
-        font-size: 35px;
+    .menu {
+        flex-direction: column;
+        height: 5vmax;
+
+        li {
+            width: 100%;
+            text-align: center;
+            background-color: $colorRed;
+            &:hover, &:active {
+                background-color: darken($colorRed, 10%);
+            }
+            display: none;
+        }
+
+        .menu__item:hover, .menu__item:active {
+            border-bottom: none;
+        }
+
+        .menu__hamburger {
+            display: block;
+            color: white;
+            font-size: 3vmax;
+        }
+
+        input:checked ~ li {
+            display: block;
+            font-size: 2.7vmax;
+        }    
     }
 
-    input:checked ~ li {
-        display: block;
-        font-size: 45px;
-    }    
-  }
+  .search-bar {
+        height: 5vmax;
+        font-size: 2.3vmax;
+        border-radius: 3px;
+        padding-left: 7vmax;
+    }
+
+    .operations-bar {
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 7vmax;
+
+        .fa-search {
+            font-size: 3vmax;
+            left: 2.2vmax;
+            top: 1.6vmax;
+        }
+        .operations-bar__search {
+            width: 80%;
+        }
+        .operations-bar__new-template {
+            align-self: center;
+            height: 5vmax;
+            width: 10%;
+            margin-bottom: 20px;
+            margin-right: 8%;
+            background-color: transparent;
+            color: $colorBlue;
+            i {
+                font-size: 5vmax;
+            }
+            p {
+                display: none;
+            }
+            &:hover {
+                background-color: transparent;
+                outline: none;
+            }
+        }
+    }
+
+  .footer {
+        height: 7vmax;
+        font-size: 2.5vmax;
+        letter-spacing: normal;    
+    }
 }
